// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Perform Update at FACAD-Schedules over a Row 1`] = `
Object {
  "Info": Object {
    "Actions": Object {
      "Delete": true,
      "Insert": true,
      "Update": true,
    },
    "Fields": Array [
      Object {
        "Combobox": null,
        "Editable": false,
        "Name": "ID",
        "Primary": true,
        "Required": false,
        "Select": null,
        "Type": "Number",
      },
      Object {
        "Combobox": null,
        "Editable": true,
        "Name": "Name",
        "Primary": false,
        "Required": true,
        "Select": null,
        "Type": "String",
      },
      Object {
        "Combobox": null,
        "Editable": true,
        "Name": "BuiltInCategory",
        "Primary": false,
        "Required": true,
        "Select": null,
        "Type": "String",
      },
      Object {
        "Combobox": null,
        "Editable": true,
        "Name": "PathName",
        "Primary": false,
        "Required": true,
        "Select": null,
        "Type": "String",
      },
    ],
  },
  "Requests": Array [],
  "Rows": Array [
    Object {
      "BuiltInCategory": "INVALID",
      "ID": 19,
      "Name": "1ssssxdd",
      "PathName": "12121sdgcw",
    },
    Object {
      "BuiltInCategory": "INVALID",
      "ID": 22,
      "Name": "csdcs",
      "PathName": "sdsd",
    },
  ],
  "Subscribed": true,
}
`;

exports[`Perform Update at FACAD-Schedules over a Row 2`] = `
Object {
  "Info": Object {
    "Actions": Object {
      "Delete": true,
      "Insert": true,
      "Update": true,
    },
    "Fields": Array [
      Object {
        "Combobox": null,
        "Editable": false,
        "Name": "ID",
        "Primary": true,
        "Required": false,
        "Select": null,
        "Type": "Number",
      },
      Object {
        "Combobox": null,
        "Editable": true,
        "Name": "Name",
        "Primary": false,
        "Required": true,
        "Select": null,
        "Type": "String",
      },
      Object {
        "Combobox": null,
        "Editable": true,
        "Name": "BuiltInCategory",
        "Primary": false,
        "Required": true,
        "Select": null,
        "Type": "String",
      },
      Object {
        "Combobox": null,
        "Editable": true,
        "Name": "PathName",
        "Primary": false,
        "Required": true,
        "Select": null,
        "Type": "String",
      },
    ],
  },
  "Requests": Array [
    "3eff0c6b-e248-41bc-bc8f-d5233f881e1c",
  ],
  "Rows": Array [
    Object {
      "BuiltInCategory": "INVALID",
      "ID": 19,
      "Name": "1ssssxdd",
      "PathName": "12121sdgcw",
    },
    Object {
      "BuiltInCategory": "INVALID",
      "ID": 22,
      "Name": "csdcs",
      "PathName": "sdsd",
    },
  ],
  "Subscribed": true,
}
`;

exports[`Perform Update at FACAD-Schedules over a Row 3`] = `
Array [
  Object {
    "BuiltInCategory": "INVALID",
    "ID": 19,
    "Name": "1ssssxdd",
    "PathName": "12121sdgcw",
  },
  Object {
    "BuiltInCategory": "INVALID",
    "ID": 22,
    "Name": "csdcs",
    "PathName": "sdsd",
  },
]
`;

exports[`Perform Update at FACAD-Schedules over a Row 4`] = `
Array [
  Object {
    "BuiltInCategory": "INVALID",
    "ID": 19,
    "Name": "modified name",
    "PathName": "12121sdgcw",
  },
  Object {
    "BuiltInCategory": "INVALID",
    "ID": 22,
    "Name": "csdcs",
    "PathName": "sdsd",
  },
]
`;
